fix: UserNotification DB 비어있는 문제 해결